--- a/builds.html
+++ b/builds.html
@@ -41,7 +41,7 @@
           </p>
 
           <p>
-               All packages hosted here are free software.
+               All packages hosted here are free software. Most packages hosted here were built on my home server with <a href="https://github.com/krathalan/krack" target="_blank" rel="noopener noreferrer">krack</a>, a continuous automated build system I wrote for Arch Linux.
           </p>
 
           <h2>Modifications</h2>
