--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           </div>
 
           <p>
-               I am a radiography student at Pima Medical Institute in Seattle, WA. I am passionate about free software, and I work on a number of free software projects.
+               I am a radiography student at Pima Medical Institute in Seattle, WA. You can find some of my school projects <a  href="school-projects/">here</a>. I am passionate about free software, and I work on a number of free software projects.
           </p>
 
-          <h2>Projects</h2>
+          <h2>Software</h2>
 
           <h3><a href="https://github.com/krathalan/wtwitch" target="_blank" rel="noopener noreferrer">wtwitch</a></h3>
 
