--- a/builds.html
+++ b/builds.html
@@ -29,9 +29,15 @@
 
      <body>
           <div id="header">
-               <h3><a href="https://krathalan.net/" rel="noopener noreferrer"><i class="fas fa-home"></i> Home</a> &nbsp; &nbsp; [<i class="fas fa-hammer"></i> Builds] &nbsp; &nbsp; <a href="https://github.com/krathalan" rel="noopener noreferrer"><i class="fab fa-github"></i> Github</a></h3>
+               <div class="container">
+                    <h3><a href="https://krathalan.net/" rel="noopener noreferrer"><i class="fas fa-home"></i> Home</a></h3>
+                    <h3>[<i class="fas fa-hammer"></i> Builds]</h3>
+                    <h3><a href="https://github.com/krathalan" rel="noopener noreferrer"><i class="fab fa-github"></i> Github</a></h3>
+               </div>
           </div>
+
           <br><br>
+
           <div id="inner">
                <h1>Krath's builds</h1>
           </div>
