--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
 
      <body>
           <div id="header">
-               <h3>[<i class="fas fa-home"></i> Home] &nbsp; &nbsp; <a href="https://builds.krathalan.net/" rel="noopener noreferrer"><i class="fas fa-hammer"></i> Builds</a> &nbsp; &nbsp; <a href="https://github.com/krathalan" rel="noopener noreferrer"><i class="fab fa-github"></i> Github</a></h3>
+               <div class="container">
+                    <div><h3>[<i class="fas fa-home"></i> Home]</h3></div>
+                    <div><h3><a href="https://builds.krathalan.net/" rel="noopener noreferrer"><i class="fas fa-hammer"></i> Builds</a></h3></div>
+                    <div><h3><a href="https://github.com/krathalan" rel="noopener noreferrer"><i class="fab fa-github"></i> Github</a></h3></div>
+               </div>
           </div>
+
           <br><br>
+
           <div id="inner">
                <h1>Hunter Peavey</h1>
           </div>
