--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
 
           <p>
-               I am a radiologic technologist in Edmonds, WA. You can find some of my prior school projects <a  href="school-projects/">here</a>. I am passionate about free software, and I work on a number of free software projects.
+               I am a radiologic technologist in Edmonds, WA. I am passionate about free software, and I maintain a few free software projects.
           </p>
 
           <h2>Software</h2>
