Fix border on liberapay link

--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
                Other inquiries: <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a> / <a href="keys/hunter.asc">7574 047B B5BC 1C35 EFD1 11E5 DD07 9BCE 2A6F 75BC</a>
           </p>
 
-          <a href="https://liberapay.com/krathalan/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a>
+          <a href="https://liberapay.com/krathalan/donate"><img style='border:0px' alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a>
      </body>
 </html>
