See last commit

--- a/builds.html
+++ b/builds.html
@@ -117,6 +117,6 @@
                About this repo/any hosted packages: <a href="mailto:dev@krathalan.net">dev@krathalan.net</a> / <a href="keys/dev.asc">0C6B 73F3 91FA 26F0 EBCD 1F75 C0F9 AEE5 6E47 D174</a>
           </p>
 
-          <a href="https://liberapay.com/krathalan/donate"><img style='border:0px' alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a>
+          <a href="https://liberapay.com/krathalan/donate"><img id="no-border" alt="Donate using Liberapay" src="donate.svg"></a>
      </body>
 </html>
