Fix issue with 404 stylesheet

--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>404 not found</title>
           <base target="_blank">
-          <link rel='stylesheet' type='text/css' href='index.css'>
+          <link rel='stylesheet' type='text/css' href='https://krathalan.net/index.css'>
      </head>
 
      <body>
