--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </p>
 
           <p>
-               Other inquiries: <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a> / <a href="keys/hunter.asc">7574 047B B5BC 1C35 EFD1 11E5 DD07 9BCE 2A6F 75BC</a>
+               Other inquiries: <a href="mailto:hunter@krathalan.net">hunter@krathalan.net</a> / <a href="keys/hunter.asc">06D3 AEDD 4501 36E4 E254 7868 652B A09F B45D DC57</a>
           </p>
 
           <a href="https://liberapay.com/krathalan/donate"><img id="no-border" alt="Donate using Liberapay" src="donate.svg"></a>
