--- a/builds.html
+++ b/builds.html
@@ -73,13 +73,16 @@
                Some packages are built with additional modifications to their PKGBUILD and/or other files, or different-than-default configuration options (click to see patches for that package):
                <ul>
                     <li><a href="https://github.com/krathalan/build-alterations/tree/master/plata-theme-krath-purple" rel="noopener noreferrer" target="_blank">plata-theme-krath-purple</a>: dark color scheme with purple accents and disable desktop environments I don't use (<a href="plata-theme-krath-purple.jpg" rel="noopener noreferrer" target="_blank">screenshot</a>)</li>
-                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/redshift-no-geoclue" rel="noopener noreferrer" target="_blank">redshift-no-geoclue</a>: build of redshift screen color adjuster without geoclue dependency</li>
-                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/wine-tkg-git-znver3" rel="noopener noreferrer" target="_blank">wine-tkg-git-znver3</a>: proton patches, enable futex2 and futex_waitv, -march=znver3</li>
+                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/wine-tkg-valve-znver3" rel="noopener noreferrer" target="_blank">wine-tkg-valve-znver3</a>: Valve wine/proton base, -march=znver3</li>
                </ul>
           </p>
 
           <p>
                Ungoogled Chromium now ships with Ozone by default: <a href="https://wiki.archlinux.org/index.php/Chromium#Native_Wayland_support" rel="noopener noreferrer" target="_blank">https://wiki.archlinux.org/index.php/Chromium#Native_Wayland_support</a>
+          </p>
+
+          <p>
+              The redshift package in the default Arch repos now has geoclue as an optional dependency.
           </p>
           
           <p>
