Minor builds.html updates

--- a/builds.html
+++ b/builds.html
@@ -43,11 +43,7 @@
           </div>
 
           <p>
-               You can find packages I have built for for Arch Linux here. You may either browse and download the packages and signatures manually, or add the repo to your <b>/etc/pacman.conf</b>.
-          </p>
-
-          <p>
-               All packages hosted here are free software. Most packages hosted here were built on my home server with <a href="https://github.com/krathalan/krack" target="_blank" rel="noopener noreferrer">krack</a>, a continuous automated build system I wrote for Arch Linux.
+               All packages hosted here are free software. Most packages hosted here were built on my home server with <a href="https://github.com/krathalan/krack" target="_blank" rel="noopener noreferrer">krack</a>, a continuous automated build system I wrote for Arch Linux. Rebuilds occur once approximately every two days.
           </p>
 
           <p>
@@ -73,7 +69,7 @@
                Some packages are built with additional modifications to their PKGBUILD and/or other files, or different-than-default configuration options (click to see patches for that package):
                <ul>
                     <li><a href="https://github.com/krathalan/build-alterations/tree/master/plata-theme-krath-purple" rel="noopener noreferrer" target="_blank">plata-theme-krath-purple</a>: dark color scheme with purple accents and disable desktop environments I don't use (<a href="plata-theme-krath-purple.jpg" rel="noopener noreferrer" target="_blank">screenshot</a>)</li>
-                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/wine-tkg-valve-znver3" rel="noopener noreferrer" target="_blank">wine-tkg-valve-znver3</a>: Valve wine/proton base, -march=znver3</li>
+                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/wine-tkg-znver3-git" rel="noopener noreferrer" target="_blank">wine-tkg-znver3-git</a>: staging base, GE+proton patches, server LTO and amdags community patches, -march=znver3</li>
                </ul>
           </p>
 
