--- a/builds.html
+++ b/builds.html
@@ -69,7 +69,7 @@
                Some packages are built with additional modifications to their PKGBUILD and/or other files, or different-than-default configuration options (click to see patches for that package):
                <ul>
                     <li><a href="https://github.com/krathalan/build-alterations/tree/master/plata-theme-krath-purple" rel="noopener noreferrer" target="_blank">plata-theme-krath-purple</a>: dark color scheme with purple accents and disable desktop environments I don't use (<a href="plata-theme-krath-purple.jpg" rel="noopener noreferrer" target="_blank">screenshot</a>)</li>
-                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/wine-tkg-znver3-git" rel="noopener noreferrer" target="_blank">wine-tkg-znver3-git</a>: staging base, GE+proton patches, server LTO and amdags community patches, -march=znver3</li>
+                    <li><a href="https://github.com/krathalan/build-alterations/tree/master/wine-tkg-znver3-git" rel="noopener noreferrer" target="_blank">wine-tkg-znver3-git</a>: staging base, GE+proton patches, enable fastsync/ntsync, server LTO and amdags community patches, -march=znver3</li>
                </ul>
           </p>
 
