See last commit

--- a/builds.html
+++ b/builds.html
@@ -70,7 +70,7 @@
                <ul>
                     <li><a href="https://github.com/krathalan/build-alterations/tree/master/plata-theme-krath-purple" rel="noopener noreferrer" target="_blank">plata-theme-krath-purple</a>: dark color scheme with purple accents and disable desktop environments I don't use (<a href="plata-theme-krath-purple.jpg" rel="noopener noreferrer" target="_blank">screenshot</a>)</li>
                     <li><a href="https://github.com/krathalan/build-alterations/tree/master/wine-tkg-znver3-git" rel="noopener noreferrer" target="_blank">wine-tkg-znver3-git</a>: staging base, GE+proton patches, esync+fsync (no fastsync or ntsync), server LTO and amdags community patches, -march=znver3</li>
-                    <li><a href="https://github.com/krathalan/build-alterations/blob/master/linux-tkg-znver3/customization.cfg" rel="noopener noreferrer" target="_blank">linux-tkg-znver3</a>: default EEVDF CPU sched, llvm LTO full, enable winesync/ntsync, max 32 cores, -march=znver3</li>
+                    <li><a href="https://github.com/krathalan/build-alterations/blob/master/linux-tkg-znver3/customization.cfg" rel="noopener noreferrer" target="_blank">linux-tkg-znver3</a>: default EEVDF CPU sched, llvm LTO full, max 32 cores, -march=znver3</li>
                </ul>
           </p>
 
